--- a/css/single-post.css
+++ b/css/single-post.css
@@ -1,4 +1,3 @@
-
 .section-single-blog-post {
     margin-top: 152px;
 }
@@ -32,6 +31,11 @@
     line-height: 175%;
     letter-spacing: 0.04em;
     color: var(--other_white);
+
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    column-gap: 12px;
 }
 
 .section-single-blog-image-container {
@@ -41,7 +45,7 @@
     overflow: hidden;
 }
 
-.section-single-blog-image-container img{
+.section-single-blog-image-container img {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -123,6 +127,186 @@
     width: 55%;
 }
 
+.single-blog-post-content-body #video {
+    min-height: 140px;
+}
+
+
+
+
+
+
+.comments-section h4 {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 32px;
+    line-height: 130%;
+    letter-spacing: 0.04em;
+    text-transform: capitalize;
+    font-feature-settings: 'tnum' on, 'lnum' on;
+    color: var(--gold);
+}
+
+.comments-container {
+    margin-top: 32px;
+    padding-top: 16px;
+    width: 50vw;
+}
+
+.comments-container .children {
+    padding-left: 5vw;
+    padding-top: 32px;
+}
+
+.comment-flex {
+    display: flex;
+}
+
+.comment-flex img {
+    width: 7.8vw;
+    height: auto;
+    margin-right: 1.2vw;
+}
+
+.comment-content {
+    width: 100%;
+}
+
+.comment-first-row {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+}
+
+.comment-first-row h5 {
+    color: var(--white);
+    padding-bottom: 8px;
+}
+
+.comment-content p, .comment-content a {
+    font-family: var(--sans);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 175%;
+    display: flex;
+    align-items: center;
+    letter-spacing: 0.04em;
+    color: var(--grey);
+    text-decoration: none;
+}
+
+.comment-content a:hover {
+    color: var(--white);
+}
+
+.comment-content-text {
+    padding-top: 8px;
+    width: 33vw;
+}
+
+.commentlist {
+    display: flex;
+    flex-direction: column;
+    row-gap: 32px;
+}
+
+.comment-form-comment label {
+    display: none;
+}
+
+#comment {
+    resize: none;
+    width: 100%;
+    height: 140px;
+    background-color: rgba(255, 255, 255, 0);
+    border: 1px solid var(--lightgold);
+    padding: 16px 19px;
+    color: var(--grey);
+    font-family: var(--cormorant);
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 175%;
+    letter-spacing: 0.04em;
+    text-transform: capitalize;
+    font-feature-settings: 'tnum' on, 'lnum' on;
+}
+
+#comment:focus {
+    outline: 2px solid var(--gold);
+}
+
+.comment-reply-title {
+    font-family: var(--sans);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 175%;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    letter-spacing: 0.04em;
+    color: var(--white);
+    padding-bottom: 16px;
+}
+
+.comment-reply-title a {
+    text-decoration: none;
+    color: var(--white);
+    padding-right: 1.7vw;
+}
+
+.comment-reply-title > a:first-child {
+    padding-left: 4px;
+}
+
+.comment-reply-title > a:first-child:hover {
+    color: var(--gold);
+}
+
+#cancel-comment-reply-link {
+    color: var(--grey);
+}
+
+#cancel-comment-reply-link:hover {
+    color: var(--gold);
+}
+
+.create-comment-block {
+    margin-top: 70px;
+    margin-bottom: 152px;
+    width: 33vw;
+}
+
+.create-comment-block h4 {
+    padding-bottom: 40px;
+}
+
+.form-submit .gold-button {
+    border: none;
+    cursor: pointer;
+    margin-top: 48px;
+}
+
+
+.create-comment-block {
+    position: relative;
+    height: 360px;
+}
+
+#respond {
+    position: absolute;
+    padding-top: 380px;
+    top: -280px;
+    width: 33vw;
+}
+
+
+
+
+
+
 
 
 
@@ -152,6 +336,26 @@
         align-self: flex-end;
         max-width: 100%;
     }
+
+    .comments-container {
+        width: 100%;
+    }
+
+    .comment-content-text {
+        width: 90%;
+    }
+
+    .create-comment-block {
+        width: 100%;
+    }
+
+    .comment-reply-title a {
+        padding-right: 3vw;
+    }
+
+    #respond {
+        width: 68vw;
+    }
 }
 
 
@@ -164,6 +368,10 @@
 
     .single-blog-post-content-body {
         width: 45vw;
+    }
+
+    #respond {
+        width: 84vw;
     }
 }
 
@@ -187,12 +395,60 @@
         flex-direction: column;
     }
 
+    .comment-flex img {
+        min-width: 80px;
+        margin-right: 12px;
+    }
+ 
+    #respond {
+        width: 68vw;
+    }
+
 }
 
 
+@media screen and (max-width: 700px) {
+
+    .text-content-element-in-post .post-content-image-right,
+    .text-content-element-in-post .post-content-image-left {
+        width: 100%;
+        padding: 0;
+    }
+    
+    .text-content-element-in-post h3 {
+        width: 100%;
+    }
+}
 
 
+@media screen and (max-width: 600px) {
+
+    .video-container.single-post {
+        width: 100vw;
+        margin-left: -16vw;
+    }
 
 
+    .comment-flex {
+        flex-direction: column;
+    }
 
+    .comment-flex img {
+        margin-right: 0;
+        margin-bottom: 12px;
+    }
 
+    
+}
+
+@media screen and (max-width: 400px) {
+
+    #comment {
+        height: 250px;
+    }
+
+    .create-comment-block {
+        height: 470px;
+    }
+
+}
