--- a/css/header.css
+++ b/css/header.css
@@ -3,7 +3,6 @@ header {
     /* top: 0; */
     z-index: 1000;
     background-color: var(--black);
-    background-color: green;
     height: var(--header_height);
     max-height: var(--header_height);
     overflow: hidden;
@@ -93,6 +92,36 @@ header button:hover {
     color: var(--gold);
 }
 
+.burger-menu {
+    display: none;
+}
+
+.hide {
+    display: none;
+}
+
+.show {
+    display: block;
+}
+
+.header-elements {
+    position: relative;
+}
+
+.burger-menu button {
+    background-color: inherit;
+    color: var(--white);
+    font-size: 30px;
+    border: none;
+}
+
+
+
+
+
+
+
+
 
 @media screen and (max-width: 1200px) {
 
@@ -116,6 +145,52 @@ header button:hover {
 
 @media screen and (max-width: 800px) {
 
+    .burger-menu {
+        display: block;
+        position: absolute;
+        right: 0;
+        top: 45px
+    }
 
+    .menu-header-menu-container {
+        display: none;
+        padding: 24px;
+        order: 3;
+    }
+
+    .header-elements-right-part {
+        display: none;
+    }
+
+    #menu-header-menu {
+        display: flex;
+        flex-direction: column;
+        gap: 12px
+    }
+    
+
+    header {
+        overflow: none;
+        height: auto;
+        max-height: 100vh;
+    }
+
+    .header-elements {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 400px) {
+
+    .burger-menu {
+
+        right: 50%;
+        top: 100px;
+        transform: translateX(50%);
+    }
+
+    #header-title {
+        padding-bottom: 65px;
+    }
 
 }
