php files is checked and corrected

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 Theme name: Gericht replica
 Author: Eugene Sukach
 Version: 1.0 
+Description: Just student's theme for write code practice
 
 */
 
